--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   transparent_image: ^2.0.1
   google_fonts: ^6.3.1
   material_symbols_icons: ^4.2867.0
+  geolocator: ^14.0.2
 
 dev_dependencies:
   flutter_test:
